[gd_scene load_steps=18 format=3 uid="uid://gh55nbno166y"]

[ext_resource type="PackedScene" uid="uid://vwa8qnjir30c" path="res://sr_engine/components/entities/stalker/SR_NpcStalker.tscn" id="1_e1fm6"]
[ext_resource type="Script" path="res://sr_engine/components/entities/player/SR_Player.gd" id="2_ebi2m"]
[ext_resource type="Script" path="res://sr_engine/components/inventory/SR_InventoryItem.gd" id="3_4gqmc"]
[ext_resource type="PackedScene" uid="uid://dy74uw5mgubcu" path="res://addons/simusdev/components/fp_controller/W_FPControllerCamera.tscn" id="3_yqvsp"]
[ext_resource type="Resource" uid="uid://ca004vj5542wv" path="res://gamedata/sr_items/consumable/alcohol/item_vodka.tres" id="4_ldact"]
[ext_resource type="PackedScene" uid="uid://564ydj7cfsmk" path="res://addons/simusdev/components/fp_controller/W_FPControllerMovement.tscn" id="4_qavqr"]
[ext_resource type="PackedScene" uid="uid://bkb2p8iu6717w" path="res://gamedata/sr_interactables/interactor/sr_interactor.tscn" id="6_k58ew"]

[sub_resource type="Resource" id="Resource_n43oo"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_i2iha"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_ppqgq"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_6uu16"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_6cuf7"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_r3i3d"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_ch2re"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_qhqow"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_vpw1w"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[sub_resource type="Resource" id="Resource_ybxfo"]
script = ExtResource("3_4gqmc")
resource = ExtResource("4_ldact")

[node name="SR_Player" node_paths=PackedStringArray("camera", "interactor") groups=["player"] instance=ExtResource("1_e1fm6")]
collision_layer = 0
script = ExtResource("2_ebi2m")
camera = NodePath("W_FPControllerCamera")
interactor = NodePath("W_FPControllerCamera/sr_interactor")
input_enabled = true

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.140288, 0)

[node name="MeshInstance3D" parent="." index="3"]
visible = true

[node name="SR_ComponentInventory" parent="." index="4"]
_items = Array[ExtResource("3_4gqmc")]([SubResource("Resource_n43oo"), SubResource("Resource_i2iha"), SubResource("Resource_ppqgq"), SubResource("Resource_6uu16"), SubResource("Resource_6cuf7"), SubResource("Resource_r3i3d"), SubResource("Resource_ch2re"), SubResource("Resource_qhqow"), SubResource("Resource_vpw1w"), SubResource("Resource_ybxfo")])

[node name="controller" type="Node3D" parent="." index="6"]

[node name="W_FPControllerCamera" parent="." index="7" node_paths=PackedStringArray("character_component") instance=ExtResource("3_yqvsp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15194, 0)
custom_cursor = true
character_component = NodePath("../W_ComponentCharacterBody3D")

[node name="sr_interactor" parent="W_FPControllerCamera" index="1" node_paths=PackedStringArray("interactor") instance=ExtResource("6_k58ew")]
interactor = NodePath("../..")

[node name="W_FPControllerMovement" parent="." index="8" node_paths=PackedStringArray("character_component") instance=ExtResource("4_qavqr")]
key_forward = "keybind_forward"
key_backward = "keybind_backward"
key_left = "keybind_left"
key_right = "keybind_right"
key_jump = "keybind_jump"
character_component = NodePath("../W_ComponentCharacterBody3D")

[node name="SR_CharacterStatsComponent" parent="." index="11"]
nick_name_key = "player_nickname"

[node name="SR_Skin" parent="." index="13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[editable path="W_FPControllerCamera"]
